--- a/src/assets/scss/_header.scss
+++ b/src/assets/scss/_header.scss
@@ -1,5 +1,7 @@
+
 .header {
-  background: url("../images/header-bg.png");
+  //background: url("../images/header-bg.png");
+  background-color: rgb(35,36,37);
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
@@ -34,7 +36,11 @@
   }
 }
 .logo__img {
-  background: url("../images/logo-img.png") no-repeat;
+  background: url("../images/png-sprite.png") no-repeat;
+  background-position: -.2rem -0;
+  overflow: hidden;
+  text-indent: -9999rem;
+
   width: 1.8rem;
   height: 1.7rem;
 }
@@ -82,9 +88,7 @@
   }
 
   &:hover {
-    background-image: -moz-linear-gradient( 90deg, $grey-2 0%, rgb(35,36,37) 100%);
-    background-image: -webkit-linear-gradient( 90deg, $grey-2 0%, rgb(35,36,37) 100%);
-    background-image: -ms-linear-gradient( 90deg, $grey-2 0%, rgb(35,36,37) 100%);
+    background-color: darken(rgb(35,36,37), 1.5%);
     box-shadow: inset 0 1px 4px 0px rgba(0, 0, 0, 0.67);
   }
 }
